[gd_scene load_steps=2 format=2]

[ext_resource path="res://gui.gd" type="Script" id=1]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -616.0
margin_top = -58.0
margin_right = 623.0
margin_bottom = -18.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer2"]
margin_right = 617.0
margin_bottom = 40.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlowBtn" type="Button" parent="HBoxContainer2/HBoxContainer"]
margin_right = 28.0
margin_bottom = 40.0
text = "<<"

[node name="SpeedLabel" type="Label" parent="HBoxContainer2/HBoxContainer"]
margin_left = 32.0
margin_top = 13.0
margin_right = 59.0
margin_bottom = 27.0
text = "1.0x"

[node name="SpeedBtn" type="Button" parent="HBoxContainer2/HBoxContainer"]
margin_left = 63.0
margin_right = 91.0
margin_bottom = 40.0
text = ">>"

[node name="PlayBtn" type="Button" parent="HBoxContainer2"]
margin_left = 621.0
margin_right = 710.0
margin_bottom = 40.0
size_flags_horizontal = 2
text = "PLAY/PAUSE"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HBoxContainer2/HBoxContainer/SlowBtn" to="." method="_on_SlowBtn_pressed"]
[connection signal="pressed" from="HBoxContainer2/HBoxContainer/SpeedBtn" to="." method="_on_SpeedBtn_pressed"]
[connection signal="pressed" from="HBoxContainer2/PlayBtn" to="." method="_on_PlayBtn_pressed"]
